--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "firebase": "^10.12.4",
+    "framer-motion": "^11.3.21",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "react": "^18",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18"
   },
   "devDependencies": {
