--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@google-cloud/automl": "^4.0.1",
+    "@google-cloud/storage": "^7.12.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.20.0",
+    "axios": "^1.7.3",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.0",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "openai": "^4.54.0",
     "react": "^18",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
